# securities_ontology

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run
db/db_models/: db_models.py
db/migration/: env.py
db/migration/versions/: 00d4a8b7eb06_add_exch.py  09d70d331a8b_ref.py  0ab5c9517415_curr.py  0b8b95f0c047_add_curr.py  18aee59285f1_sec_link.py  190fd039ab60_ref.py  194217ae126d_init.py  1a6eb18a2272_ref.py  20c6a615e9b6_cb_gdp.py  21d061230634_sec_link.py  2d8ba7ae6e65_ohlc_1dw.py  3843eaf3037c_first_date.py  38a2adf43194_sec_link_1.py  38bd4d28fe60_fill_dict.py  433739f57799_ref.py  50127f3fdb1e_securities.py  53f8b5219e30_sec_link_2.py  5d847eba2bf5_fill_exchange.py  64b5597dc59a_ref.py  64c651e66322_divid.py  688644951d5e_set_sec_type.py  6925ae140af7_ref.py  70bc525fa62c_issuer_table.py  741abf86edc8_ref.py  8123af3c9a68_person.py  818aa682962f_sec_type_type.py  88227a306b00_ref.py  88b3d0eaf2fd_exchange.py  8bd8d3fe1b44_ipo.py  8ca70d322e44_ref.py  8f1ea14b88da_dict_tables.py  a9a801bc1ef7_ceo.py  aa74bb91f908_sec_type_type.py  aabb5d68ec2e_exchange_add.py  ba8158747de6_exchange.py  bec216c708b0_twittter.py  c79ca0d08e5c_ohlc.py  cf102c0b7f9d_fill_country.py  d7d0e6078215_ohlc.py  (+5 more)
jobs/dict/: dict_loader.py
jobs/dividents/: load_dividents.py
jobs/ohlc/: ohlc_tinkoff_loader.py
jobs/securities/: securities_loader.py
src/: config.py  main.py
src/adapters/: adapters_ioc.py  divid_provider.py  ohlc_provider.py  securities_provider.py
src/use_cases/: divid_reader.py  ohlc_reader.py  securities_reader.py  use_cases_ioc.py
(+11 files in other folders)
